# Guinevere

./: CMakeLists.txt  LICENSE  README.md
Docs/: Architecture.md  GettingStarted.md
examples/: CMakeLists.txt  demo_drm.cpp  demo_style.cpp  demo_textedit.cpp  demo_textedit_multiline.cpp  demo_textedit_password.cpp  demo_window.cpp
include/guinevere/: guinevere.hpp
include/guinevere/app/: runner.hpp
include/guinevere/asset/: asset_manager.hpp
include/guinevere/gfx/: color.hpp  rect.hpp  renderer.hpp  renderer_factory.hpp
include/guinevere/platform/: glfw_window.hpp
include/guinevere/style/: style_engine.hpp
include/guinevere/text/: freetype_library.hpp
include/guinevere/ui/: frame_builder.hpp  interaction.hpp  runtime.hpp  state_store.hpp  types.hpp
src/: CMakeLists.txt
src/app/: runner.cpp
src/asset/: asset_manager.cpp
src/gfx/: opengl_renderer.cpp  renderer_factory.cpp
src/platform/: glfw_window.cpp
src/style/: style_engine.cpp
src/text/: freetype_library.cpp
src/ui/: interaction.cpp  layout.cpp  pipeline.cpp  runtime.cpp  state_store.cpp  text_edit_display.hpp  tree.cpp
tests/: CMakeLists.txt  asset_management_test.cpp  dummy_test_main.cpp  font_loading_test.cpp  layout_helpers_test.cpp  text_edit_password_test.cpp
